--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <title>{% if page.title %}{{ page.title }} ⚒ {% endif %}{{ site.title }}</title>
+    {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ page.title }} ⚒ {{ site.github.project_title }}</title>
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
