Start getting ready for project pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>{% if page.title %}{{ page.title }} ⚒ {% endif %}{{ site.title }}</title>
+    <title>{{ site.title }}{% if page.title %} ⚒ {{ page.title }}{% endif %}</title>
     {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{{ site.baseurl }}/css/bootstrap.min.css" rel="stylesheet">
