--- a/css/syntax.css
+++ b/css/syntax.css
@@ -60,3 +60,7 @@
 .highlight .vg { color: #008080 } /* Name.Variable.Global */
 .highlight .vi { color: #008080 } /* Name.Variable.Instance */
 .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+/* http://codeseed.org */
+.highlight .nd { font-style: italic } /* Name.Decorator */
+.highlight .kn { font-weight: bold } /* Keyword.Namespace */
